Fix homepage on mobile

--- a/app/assets/stylesheets/_homepage.css.scss
+++ b/app/assets/stylesheets/_homepage.css.scss
@@ -7,6 +7,10 @@ body.home .nav-custom {
   top: 0;
 }
 
+span.no-break {
+  white-space: nowrap;
+}
+
 .BV-cover {
   background: linear-gradient(
     rgba(45, 45, 45, 0.37),
@@ -209,7 +213,8 @@ section#map {
     }
   }
 
-  #postcode, section#join-our-amazing-community .form-group {
+  #postcode,
+  section#join-our-amazing-community .form-group {
     display: block;
     min-width: 350px;
   }
@@ -218,11 +223,13 @@ section#map {
     margin-bottom: 0;
   }
 
-  #postcode .input-group, section#join-our-amazing-community .form-group .input-group {
+  #postcode .input-group,
+  section#join-our-amazing-community .form-group .input-group {
     width: 100%;
   }
 
-  #search-btn, section#join-our-amazing-community form.search-form button {
+  #search-btn,
+  section#join-our-amazing-community form.search-form button {
     display: block;
     width: 100%;
   }
@@ -247,6 +254,13 @@ section#map {
     h1 {
       font-size: 36px;
     }
+  }
+
+  #postcode,
+  section#join-our-amazing-community .form-group {
+    max-width: 370px;
+    min-width: initial;
+    width: 80vw;
   }
 
   section.meet-community {
@@ -291,6 +305,12 @@ section#map {
     .highlights {
       margin-top: 15px;
     }
+  }
+
+  #postcode,
+  section#join-our-amazing-community .form-group {
+    min-width: auto;
+    width: 80vw;
   }
 
   #why-phs {
